force-app/main/default/objects/Incident__c/fields/Type_of_non_conformance__c.field-meta.xml
<CustomField>
    <fullName>Type_of_non_conformance__c</fullName>
    <label>Type of non-conformance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behaviour</fullName>
            </value>
            <value>
                <fullName>Policy or Process</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>