force-app/main/default/objects/Incident__c/fields/Vehicle_part_damaged__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_part_damaged__c</fullName>
    <label>Vehicle part damaged</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bonnet</fullName>
            </value>
            <value>
                <fullName>Boot</fullName>
            </value>
            <value>
                <fullName>Exhaust engine</fullName>
            </value>
            <value>
                <fullName>Front bumper bar</fullName>
            </value>
            <value>
                <fullName>Front left panel</fullName>
            </value>
            <value>
                <fullName>Front left tyre</fullName>
            </value>
            <value>
                <fullName>Front right panel (driver side)</fullName>
            </value>
            <value>
                <fullName>Front right tyre</fullName>
            </value>
            <value>
                <fullName>Interior</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Radiator</fullName>
            </value>
            <value>
                <fullName>Rear bumper bar</fullName>
            </value>
            <value>
                <fullName>Rear left panel</fullName>
            </value>
            <value>
                <fullName>Rear left tyre</fullName>
            </value>
            <value>
                <fullName>Rear right panel</fullName>
            </value>
            <value>
                <fullName>Rear right tyre</fullName>
            </value>
            <value>
                <fullName>Roof</fullName>
            </value>
            <value>
                <fullName>Side left panel</fullName>
            </value>
            <value>
                <fullName>Side right panel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>