force-app/main/default/objects/Incident__c/fields/Volunteer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Comments__c</fullName>
    <label>Volunteer Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>