force-app/main/default/objects/Incident__c/fields/Volunteer_Involved__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Involved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Involved</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents (Volunteer Involved)</relationshipLabel>
    <relationshipName>VolunteerIncidents</relationshipName>
    <type>Lookup</type>
</CustomField>