force-app/main/default/objects/Incident__c/fields/Was_an_ambulance_called__c.field-meta.xml
<CustomField>
    <fullName>Was_an_ambulance_called__c</fullName>
    <label>Was an ambulance called?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>