force-app/main/default/objects/Incident__c/fields/Was_first_aid_required__c.field-meta.xml
<CustomField>
    <fullName>Was_first_aid_required__c</fullName>
    <label>Was first aid required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>