force-app/main/default/objects/Incident__c/fields/Were_emergency_services_required__c.field-meta.xml
<CustomField>
    <fullName>Were_emergency_services_required__c</fullName>
    <label>Were emergency services required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>