force-app/main/default/objects/Incident__c/fields/Witness_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Witness_1_Email__c</fullName>
    <label>Witness 1 Email</label>
    <type>Email</type>
</CustomField>