force-app/main/default/objects/Incident__c/fields/Witness_1_Phone__c.field-meta.xml
<CustomField>
    <fullName>Witness_1_Phone__c</fullName>
    <label>Witness 1 Phone</label>
    <type>Phone</type>
</CustomField>