force-app/main/default/objects/Incident__c/fields/Witness_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Witness_2_Email__c</fullName>
    <label>Witness 2 Email</label>
    <type>Email</type>
</CustomField>