force-app/main/default/objects/Incident__c/fields/Witness_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Witness_2_Name__c</fullName>
    <label>Witness 2 Name</label>
    <type>TextArea</type>
</CustomField>