force-app/main/default/objects/Incident__c/fields/Witness_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Witness_2_Phone__c</fullName>
    <label>Witness 2 Phone</label>
    <type>Phone</type>
</CustomField>