force-app/main/default/objects/Incident__c/fields/Witness_3_Email__c.field-meta.xml
<CustomField>
    <fullName>Witness_3_Email__c</fullName>
    <label>Witness 3 Email</label>
    <type>Email</type>
</CustomField>