force-app/main/default/objects/Incident__c/fields/Witness_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Witness_3_Name__c</fullName>
    <label>Witness 3 Name</label>
    <type>TextArea</type>
</CustomField>