force-app/main/default/objects/Incident__c/fields/Witness_3_Phone__c.field-meta.xml
<CustomField>
    <fullName>Witness_3_Phone__c</fullName>
    <label>Witness 3 Phone</label>
    <type>Phone</type>
</CustomField>