force-app/main/default/objects/Incident__c/fields/Witness_3_Statement__c.field-meta.xml
<CustomField>
    <fullName>Witness_3_Statement__c</fullName>
    <label>Witness 3 Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>