force-app/main/default/objects/Incident__c/fields/Witness_Name__c.field-meta.xml
<CustomField>
    <fullName>Witness_Name__c</fullName>
    <label>Witness 1 Name</label>
    <type>TextArea</type>
</CustomField>