force-app/main/default/objects/Incident__c/recordTypes/Behaviour_Incident.recordType-meta.xml
<RecordType>
    <fullName>Behaviour_Incident</fullName>
    <active>true</active>
    <label>Behaviour Incident</label>
</RecordType>