force-app/main/default/objects/Incident__c/recordTypes/Complaint.recordType-meta.xml
<RecordType>
    <fullName>Complaint</fullName>
    <active>true</active>
    <label>Complaint</label>
</RecordType>