force-app/main/default/objects/Incident__c/recordTypes/CyberSecurity.recordType-meta.xml
<RecordType>
    <fullName>CyberSecurity</fullName>
    <active>true</active>
    <label>CyberSecurity</label>
</RecordType>