force-app/main/default/objects/Incident__c/recordTypes/Damaged_Property.recordType-meta.xml
<RecordType>
    <fullName>Damaged_Property</fullName>
    <active>true</active>
    <label>Damaged Property</label>
</RecordType>