force-app/main/default/objects/Incident__c/recordTypes/Illness.recordType-meta.xml
<RecordType>
    <fullName>Illness</fullName>
    <active>true</active>
    <label>Illness</label>
</RecordType>