force-app/main/default/objects/Incident__c/recordTypes/Injury.recordType-meta.xml
<RecordType>
    <fullName>Injury</fullName>
    <active>true</active>
    <label>Injury</label>
</RecordType>