force-app/main/default/objects/Incident__c/recordTypes/Medication_Error.recordType-meta.xml
<RecordType>
    <fullName>Medication_Error</fullName>
    <active>true</active>
    <description>For use when an incident when giving medication has occurred.</description>
    <label>Medication Error</label>
</RecordType>