force-app/main/default/objects/Incident__c/recordTypes/Near_Miss.recordType-meta.xml
<RecordType>
    <fullName>Near_Miss</fullName>
    <active>true</active>
    <label>Near Miss</label>
</RecordType>