force-app/main/default/objects/Incident__c/recordTypes/Non_Compliant.recordType-meta.xml
<RecordType>
    <fullName>Non_Compliant</fullName>
    <active>true</active>
    <label>Breach</label>
</RecordType>