force-app/main/default/objects/Incident__c/recordTypes/Safeguarding_Children.recordType-meta.xml
<RecordType>
    <fullName>Safeguarding_Children</fullName>
    <active>true</active>
    <label>Safeguarding Children</label>
</RecordType>