force-app/main/default/objects/Incident__c/recordTypes/Vehicle_Incident.recordType-meta.xml
<RecordType>
    <fullName>Vehicle_Incident</fullName>
    <active>true</active>
    <label>Vehicle Incident</label>
</RecordType>