force-app/main/default/objects/Incident__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Incident_Date_Time__c</columns>
    <columns>Severity__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>