force-app/main/default/objects/Incident__c/listViews/New_Incidents.listView-meta.xml
<ListView>
    <fullName>New_Incidents</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Severity__c</columns>
    <columns>Status__c</columns>
    <columns>Incident_Date_Time__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <label>New Incidents</label>
</ListView>