force-app/main/default/objects/Incident__c/listViews/Serious_Incidents.listView-meta.xml
<ListView>
    <fullName>Serious_Incidents</fullName>
    <columns>NAME</columns>
    <columns>Incident_Date_Time__c</columns>
    <columns>Severity__c</columns>
    <columns>Status__c</columns>
    <columns>Reporters_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Severity__c</field>
        <operation>equals</operation>
        <value>Major,Severe</value>
    </filters>
    <label>Serious Incidents</label>
</ListView>